feat: add debug profile